clusters/main/kubernetes/networking/envoy-gateway/config/gatewayclass.yaml
# yaml-language-server: $schema=https://www.schemastore.org/any.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-internal
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-internal
    namespace: envoy-gateway
